--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,8 +10,24 @@ body {
   text-align: justify;
   background-color: #f1f2f2;
 }
-a{
+a {
   color: black;
+}
+
+.avatar {
+  width: 120px;
+  border-radius: 50%;
+  border: solid 4px white;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.33);
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
 }
 
 .material-icons {
