--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,4 +1,5 @@
 .c-project__card {
-  border: solid 1px #ccc;
+  border-radius: 2px;
   padding: 20px;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 2px 3px rgba(0, 0, 0, .2);
 }
